Document jdtls server